random line add

--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,17 @@
   </head>
   <body class="wv-100">
     <div id="top" class="container">
-      <table class="table table-striped">
-        <thead class="thead-dark">
-          <td colspan="2" class="text-center h2">
-            Wonderful Facts about World's Doggos
-          </td>
-        </thead>
+      <h2 class="text-center">
+        Wonderful Facts about World's Doggos
+      </h2>
+      <td>
+        <p>
+          Here is a random fact about a dog for you:</br>
+          <span id="randFact"></span>
+        </p>
+      </td>
+      <table class="table table-striped table-hover">
+        <thead class="thead-dark"></thead>
         <tbody class="table tbody-striped"></tbody>
       </table>
       <nav class="nav">
