--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,11 @@
         <span class="sr-only">Loading...</span>
       </div>
     </div>
+    <footer class="footer  bg-light wv-100 text-center p-2">
+      <div class="container">
+        <span class="text-muted ">Rytis &copy 2020</span>
+      </div>
+    </footer>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
